--- a/Frontend course/usuarios.html
+++ b/Frontend course/usuarios.html
@@ -18,7 +18,7 @@
         </div>
 
         <div id="usuarioInfo">
-            <span>Usuário: Admnistrador (Admin)</span>
+            <span>Usuário: Administrador (Admin)</span>
             <span>Papel: ADMIN</span>
             <button type="button">Logout</button>
         </div>
@@ -44,10 +44,10 @@
             ERRO! 
         
         </div>
-        <!-- <div class="alerta sucesso">
+        <div class="alerta sucesso">
             <span>&times;</span>
             SUCESSO!
-        </div> -->
+        </div>
         <form action="#" method="get">
             <input type="hidden" name="id">
             <label for="nomeCompleto"Nome>Nome</label>
@@ -86,7 +86,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
+                    <td class="fit">1</td>
                     <td>Administrador</td>
                     <td>admin</td>
                     <td>Sim</td>
@@ -97,7 +97,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>2</td>
+                    <td class="fit">2</td>
                     <td>Lucas</td>
                     <td>lucas</td>
                     <td>Sim</td>
@@ -108,7 +108,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>3</td>
+                    <td class="fit">3</td>
                     <td>Paulo</td>
                     <td>paulo</td>
                     <td>Não</td>
